fixed messages overflow

--- a/react-app/src/components/Messages/Messages.css
+++ b/react-app/src/components/Messages/Messages.css
@@ -10,7 +10,28 @@
   align-items: center;
   width: 100%;
 }
-.all_messages {
-  height: 90%;
+.messages {
+  max-height: 80vh;
   overflow-y: auto;
+}
+
+.messages::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+.messages::-webkit-scrollbar-button {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+.messages::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+.messages::-webkit-scrollbar-thumb {
+  background-color: #4a4d52;
+  border: 2px solid #282a2d;
+  border-radius: 10px;
 }
