--- a/react-app/src/components/OneServer/OneServer.css
+++ b/react-app/src/components/OneServer/OneServer.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 .header {
@@ -35,6 +36,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: 100%;
 }
 .one_channel {
   display: flex;
