--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -15,5 +15,6 @@ body {
 
 .logged_app {
   display: flex;
-  max-width: 100vw;
+  width: 100%;
+  height: 100%;
 }
